--- a/frontend/src/components/SignupFormPage/SignupForm.css
+++ b/frontend/src/components/SignupFormPage/SignupForm.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Baloo+2:wght@400;500;600;700;800&family=Comfortaa:wght@300;400;500;600;700&family=Manjari:wght@100;400;700&display=swap');
 
-.title {
+h1 {
     font-family: 'Manjari', sans-serif;
     font-weight: bold;
 }
@@ -9,7 +9,6 @@
     display: flex;
     flex-direction: column;
     width: 20rem;
-    column-gap: 1rem;
     box-sizing: border-box;
     align-items: center;
     background-color: white;
@@ -21,7 +20,7 @@
     flex-direction: column;
     width: 100%;
     box-sizing: border-box;
-    padding: 25px;
+    padding: 0 25px 25px 25px;
 
 }
 
