--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -1,3 +1,94 @@
 .hidden {
     display: none
 }
+
+.logo {
+    height: 8rem
+}
+
+.navbar {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    height: 80px;
+
+}
+
+.navLi {
+    list-style-type: none;
+}
+
+.navButton {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    column-gap: .5rem;
+    padding: 5px;
+    cursor: pointer;
+    border-radius: 25px;
+    border: 1px solid #51636D;
+    background: transparent;
+    width: 100px;
+    height: 50px;
+    margin-right: 10px;
+}
+
+.fa-solid.fa-bars {
+    font-size: 20px;
+    color: #51636D;
+
+}
+
+.fas.fa-user-circle {
+    font-size: 35px;
+    color: #51636D;
+}
+
+.profile-dropdown {
+    list-style-type: none;
+    cursor: pointer;
+    font-family: 'Manjari', sans-serif;
+    font-size: 20px;
+    padding: 10px;
+    margin-top: 10px;
+    border-radius: 10px;
+    position: absolute;
+    right: 20px;
+    width: 160px;
+    color: #51636D;
+    background-color: rgb(255, 255, 255);
+    box-shadow: 5px 5px 5px rgb(198, 198, 198);
+
+
+}
+
+.log-in {
+    background-color: white;
+    margin-bottom: 8px;
+}
+
+.sign-up {
+    background-color: white;
+}
+
+.logout-button {
+    height: 3rem;
+    background-color: #ff5a5f;
+    color: white;
+    box-shadow: 4px 3px 5px rgb(133, 117, 117);
+    font-family: 'Comfortaa', cursive;
+    font-size: 16px;
+    font-weight: bold;
+    border-radius: 15px;
+    border: none;
+    margin: 0 auto;
+    cursor: pointer;
+    width: 90%;
+}
+
+.log-in-button {
+    background-color: white;
+    display: flex;
+    justify-content: center;
+    margin-top: 15px;
+}
