added demo user

--- a/frontend/src/components/SignupFormModal/SignupForm.css
+++ b/frontend/src/components/SignupFormModal/SignupForm.css
@@ -60,5 +60,7 @@ h1 {
     border: #51636d71 1px solid;
     height: 25px;
     font-size: 14px;
+    font-family: 'Manjari', sans-serif;
+    letter-spacing: 1.5px;
 
 }
