--- a/frontend/src/components/SignupFormModal/SignupForm.css
+++ b/frontend/src/components/SignupFormModal/SignupForm.css
@@ -6,6 +6,11 @@ h1 {
     color: #51636D;
 }
 
+h2 {
+    font-family: 'Manjari', sans-serif;
+    color: #51636D;
+}
+
 #signupBox {
     display: flex;
     flex-direction: column;
@@ -63,4 +68,10 @@ h1 {
     font-family: 'Manjari', sans-serif;
     letter-spacing: 1.5px;
 
+}
+
+.rating {
+    display: flex;
+    align-items: center;
+    
 }
