create review done

--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -55,6 +55,7 @@
     border-radius: 10px;
     position: absolute;
     right: 20px;
+    top: 80px;
     width: 160px;
     color: #51636D;
     background-color: rgb(255, 255, 255);
