--- a/frontend/src/components/Spots/SpotShow.css
+++ b/frontend/src/components/Spots/SpotShow.css
@@ -64,7 +64,7 @@ p {
     border: #51636D 1px solid;
     display: flex;
     flex-direction: column;
-    width: 30px;
+    width: 300px;
     padding: 8px;
     margin-left: 15px;
     border-radius: 15px;
@@ -110,6 +110,7 @@ p {
     align-items: center;
     align-self: center;
     column-gap: 2px;
+    margin-top: 0;
 }
 
 .top-info {
@@ -194,4 +195,21 @@ p.price-spots {
 
 h2.title-spots {
     margin-bottom: 12px;
+}
+
+.dot-from-hell-small {
+    margin-bottom: 20px;
+    font-size: 35px;
+    height: 100%;
+    margin-left: 8px;
+
+}
+
+.dot-from-hell {
+    font-size: 45px;
+    /* change this value to make the dot bigger or smaller */
+    margin-bottom: 45px;
+    margin-left: 10px;
+    margin-right: 10px;
+    height: 40px;
 }
