finished reviews and updating a spot

--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -109,3 +109,10 @@
     align-items: center;
     column-gap: 1rem;
 }
+
+.log-in a {
+    text-decoration: none;
+    list-style-type: none;
+    color: #51636D;
+    background-color: white;
+}
