--- a/frontend/src/components/Spots/SpotShow.css
+++ b/frontend/src/components/Spots/SpotShow.css
@@ -65,11 +65,11 @@ p {
     display: flex;
     flex-direction: column;
     width: 300px;
-    padding: 8px;
+    padding: 8px 8px 20px 8px;
     margin-left: 15px;
     border-radius: 15px;
     box-sizing: border-box;
-
+    height: 100%;
 }
 
 .top-area-reserve {
