--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -56,8 +56,8 @@
     border-radius: 10px;
     position: absolute;
     right: 20px;
-    top: 80px;
-    width: 160px;
+    top: 6.5rem;
+    width: 12rem;
     color: #51636D;
     background-color: rgb(255, 255, 255);
     box-shadow: 5px 5px 5px rgb(198, 198, 198);
