--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -3,14 +3,14 @@
 }
 
 .logo {
-    height: 8rem
+    height: 6rem
 }
 
 .navbar {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    height: 9rem;
+    height: 5rem;
     border-bottom: #51636d70 1px solid;
     padding-left: 5px;
 
@@ -30,19 +30,19 @@
     border-radius: 25px;
     border: 1px solid #51636D;
     background: transparent;
-    width: 100px;
-    height: 50px;
+    width: 5rem;
+    height: 2.5rem;
     margin-right: 10px;
 }
 
 .fa-solid.fa-bars {
-    font-size: 20px;
+    font-size: 15px;
     color: #51636D;
 
 }
 
 .fas.fa-user-circle {
-    font-size: 35px;
+    font-size: 25px;
     color: #51636D;
 }
 
