fixed issue with nav bar

--- a/frontend/src/components/UserBookings/UserBookings.css
+++ b/frontend/src/components/UserBookings/UserBookings.css
@@ -12,3 +12,15 @@
     display: flex;
 
 }
+
+.trips-wrapper {
+    padding: 0 1rem;
+}
+
+.upcoming-trip-div {
+    padding: 0 1rem;
+}
+
+.past-trip-div {
+    padding: 0 1rem;
+}
